# Pose_Detection

./: .gitignore  main.py  main_window.py  pyproject.toml  requirements.txt
age_module/: .gitignore  age_client.py  age_worker.py  client.py  model.py  predictor.py  requirements.txt  server.py
age_module/data/: dataset.py
age_module/models/: mobilenetv3_age.py
age_module/trainer/: clean_dataset.py  train.py  transforms.py
age_module/utils/: age_bins.py
camera/: auto_camera.py  camera_config.py  camera_manager.py  test_camera.py
core/: detector.py  gait_encoder.py  gait_features.py  matcher.py
data/profiles/: gait_reference.npy  person_01.npy
emotion_module/: .gitignore  emotion_labels.py  emotion_recognizer.py  evaluate.py  requirements.txt  train_emotion_model.py
emotion_module/emotion_code/: create_labels.py  emotion_model.py  emotion_predictor.py  emotion_worker.py
face/: face_encoder.py  face_matcher.py  face_window.py  reference_manager.py  requirements.txt  webcam.py
face_module/: face_encoder.py  face_window.py  reference_manager.py  requirements.txt  webcam.py
gender_age_module/: gender_age_adapter.py  gender_age_client.py  gender_age_worker.py  requirements.txt
mental_state_module/: .gitignore  config.py  requirements.txt  run_dashboard.py
pipeline/: enroll.py
profiles/: reference_embedding.npy
src/: config.py
theaft_module/: evaluate.py  requirements.txt  train.py
theft_module/: .gitignore  data.yaml  predictor.py  theft_client.py  theft_worker.py
tools/: inspect_mat.py  json_to_npy.py  test_inference.py  video_to_skeleton.py
(+44 files in other folders)
